--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  provider: ^4.0.0
+  sliding_up_panel: ^0.3.6
+  circular_bottom_navigation: ^1.0.1
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
