Actually connected the app to Firebase
Previous commit didn't push all the file changes correctly, so this commit actually does it.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,11 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^4.0.0
+  firebase_core: ^0.4.3+1
+  firebase_analytics: ^5.0.9
+  firebase_auth: ^0.15.3
+  cloud_firestore: ^0.13.0+1
+  firebase_storage: ^3.1.1
   sliding_up_panel: ^0.3.6
   circular_bottom_navigation: ^1.0.1
   
