--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,12 @@ dependencies:
   firebase_auth: ^0.15.3
   cloud_firestore: ^0.13.0+1
   firebase_storage: ^3.1.1
+  location: ^2.3.5
+  google_maps_flutter: ^0.5.21+15
+  image_picker: ^0.6.2+3
   sliding_up_panel: ^0.3.6
   circular_bottom_navigation: ^1.0.1
+  intl: ^0.16.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
