--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   sliding_up_panel: ^0.3.6
   circular_bottom_navigation: ^1.0.1
   intl: ^0.16.0
+  shared_preferences: ^0.5.6
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
