--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   intl: ^0.16.0
   flutter_masked_text: ^0.8.0
   pin_code_fields: ^2.3.0+3
+  square_in_app_payments: ^1.3.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
